[2.7] bpo-38535: Fix positions for AST nodes for calls without arguments in decorators. (GH-16861). (cherry picked from commit 26ae9f6d3d755734c9f371b9356325afe5764813)

Co-authored-by: Serhiy Storchaka <storchaka@gmail.com>